// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Link /> > Default story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
    href="http://example.org/"
  >
    Link
  </a>
</div>
`;

exports[`<Link /> > Emphasis story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    <a
      class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-default_d78ce8 _link--size-md_d78ce8"
      href="http://example.org/"
    >
      Default Emphasis
    </a>
    <br />
    <a
      class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-high_d78ce8 _link--size-md_d78ce8"
      href="http://example.org/"
    >
      High Emphasis
    </a>
    <br />
    <a
      class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-md_d78ce8"
      href="http://example.org/"
    >
      Low Emphasis
    </a>
  </div>
</div>
`;

exports[`<Link /> > InheritColor story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div
    class="text-utility-critical"
  >
    <div>
      Lorem ipsum dolor sit amet,
       
      <a
        class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
        href="https://example.com/"
      >
        consectetur adipiscing elit
      </a>
      . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
       
      <a
        class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
        href="https://example.org"
      >
        Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
      </a>
       
      Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
       
      <a
        class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
        href="https://example.edu"
      >
        vel pulvinar
      </a>
       
      euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
    </div>
  </div>
</div>
`;

exports[`<Link /> > InverseVariant story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div
    class="p-spacing-size-half text-utility-inverse w-[384px] text-center"
  >
    <a
      class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8 _link--variant-inverse_d78ce8"
      href="http://example.org/"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`<Link /> > LinkInParagraphContext story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    Lorem ipsum dolor sit amet,
     
    <a
      class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
      href="https://example.com/"
    >
      consectetur adipiscing elit
    </a>
    . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
    <a
      class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
      href="https://example.org"
    >
      Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
    </a>
     
    Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
     
    <a
      class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
      href="https://example.edu"
    >
      vel pulvinar
    </a>
     
    euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
  </div>
</div>
`;

exports[`<Link /> > LinkWithChevron story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--has-right-icon_d78ce8 _link--size-lg_d78ce8"
    href="http://example.org/"
  >
    Default
    <svg
      aria-hidden="true"
      class="_icon_779da8 _link__icon_d78ce8"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.9462 12.0004L8.34619 7.40043L9.39994 6.34668L15.0537 12.0004L9.39994 17.6542L8.34619 16.6004L12.9462 12.0004Z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> > LinkWithFormattedChildren story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-default_d78ce8 _link--has-right-icon_d78ce8 _link--size-lg_d78ce8"
    href="http://example.org/"
  >
    <em>
      emphasized link
    </em>
    <svg
      aria-hidden="true"
      class="_icon_779da8 _link__icon_d78ce8"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> > LinkWithOpenIcon story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-default_d78ce8 _link--has-right-icon_d78ce8 _link--size-lg_d78ce8"
    href="http://example.org/"
  >
    Default
    <svg
      aria-hidden="true"
      class="_icon_779da8 _link__icon_d78ce8"
      fill="currentColor"
      height="24px"
      style="--icon-size: 24px;"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
      />
    </svg>
  </a>
</div>
`;

exports[`<Link /> > StandaloneInverseVariant story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <a
    class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8 _link--variant-inverse_d78ce8"
    href="http://example.org/"
  >
    Link
  </a>
</div>
`;

exports[`<Link /> > UsingExtendedLink story renders snapshot 1`] = `
<div
  class="text-utility-default-primary"
>
  <div>
    Lorem ipsum dolor sit amet,
     
    <a
      class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--size-lg_d78ce8"
      href="https://example.org/extended-link/"
      to="test"
    >
      consectetur adipiscing elit
    </a>
    . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
     
  </div>
</div>
`;

exports[`<Link /> > passes class names down properly 1`] = `
<a
  class="exampleClassName _link_d78ce8 _link--emphasis-default_d78ce8"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> > passes test ids down properly 1`] = `
<a
  class="_link_d78ce8 _link--emphasis-default_d78ce8"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
